--- a/.travis.yml
+++ b/.travis.yml
@@ -29,8 +29,8 @@ addons:
       - libfcgi-dev
 
 install:
-  # Install openssl
-  - sudo apt-get install libssl-dev
+  # Install libcrypto
+  - apt-get install libssl-dev
   # Install Roswell
   - curl -L https://raw.githubusercontent.com/snmsts/roswell/$ROSWELL_BRANCH/scripts/install-for-ci.sh | sh
   - ros asdf install
