--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
-os: trusty
 language: common-lisp
+dist: trusty
 
 # Wookie handler fails with memory corruption when using Travis CI's new container-based architecture.
 sudo: required
