--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: common-lisp
-dist: trusty
+dist: xenial
 
 # Wookie handler fails with memory corruption when using Travis CI's new container-based architecture.
 sudo: required
@@ -30,7 +30,6 @@ addons:
       - libfcgi-dev
       - libssl-dev
       - gcc-5
-
 
 install:
   # Install Roswell
